# NdkTab

./: .gitignore  AbstractFactory.md  README.md  README_DP.md  README_DP2.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Mylib.h  native-lib.cpp
app/src/main/cpp/mylib/: Array.h  BTree.h  BTreeNode.h  CircleList.h  DualLinkList.h  DynamicArray.h  DynamicList.h  Exception.cpp  Exception.h  GTree.h  GTreeNode.h  HString.cpp  HString.h  LinkList.h  LinkStack.h  List.h  Log.h  Object.cpp  Object.h  SeqList.h  SmartPointer.h  Sort.h  Stack.h  StaticArray.h  StaticLinkList.h  StaticList.h  StaticQueue.h  Test.h  Tree.h  TreeNode.h
app/src/main/cpp/temp/: Heap.h  (+1 more)
gradle/wrapper/: gradle-wrapper.properties
nativelib/src/main/cpp/: native-lib.cpp  nativelib.cpp
ndklib/: build.gradle
ndklib/src/main/: AndroidManifest.xml
stdlib/: build.gradle
stdlib/doc/: 7_Rule.md  AbstractFactory&FactoryMethod.md  Adapter.md  Bridge.md  Builder.md  ChainOfResponsibility.md  Command.md  Composite.md  DP_Template.md  Decorator.md  Facade.md  Flyweight.md  Interpreter.md  Iterator.md  Mediator.md  Memento.md  Observer.md  ProtoType.md  Proxy.md  README_DP.md  Singleton.md  State.md  Strategy&StaticFactory.md  TemplateMethod.md  Visitor.md
stdlib/doc/img/: DP.drawio
stdlib/src/main/: AndroidManifest.xml
stdlib/src/main/cpp/: CMakeLists.txt  nativelib.cpp
stdlib/src/main/cpp/mylib/: BTree.h  GTreeNode.h  HString.cpp  Log.h  Object.h  Queue.h  Test.cpp
stdlib/src/main/cpp/temp/: test1.cpp
(+120 files in other folders)
